Add About and Help

--- a/About.Rmd
+++ b/About.Rmd
@@ -1,7 +1,7 @@
 
 # About the Authors {-}
 
-These credits are based on our [course contributors table guidelines](https://github.com/jhudsl/OTTR_Template/wiki/How-to-give-credits).
+These credits are based on our [course contributors table guidelines](https://github.com/jhudsl/DaSL_Course_Template_Bookdown/wiki/How-to-give-credits).
 
 &nbsp;
 &nbsp;
@@ -9,33 +9,22 @@ These credits are based on our [course contributors table guidelines](https://gi
 |Credits|Names|
 |-------|-----|
 |**Pedagogy**||
-|Lead Content Instructor(s)|[FirstName LastName]|
-|Lecturer(s) (include chapter name/link in parentheses if only for specific chapters) - make new line if more than one chapter involved| Delivered the course in some way - video or audio|
-|Content Author(s) (include chapter name/link in parentheses if only for specific chapters) - make new line if more than one chapter involved | If any other authors besides lead instructor| 
-|Content Contributor(s) (include section name/link in parentheses) - make new line if more than one section involved|  Wrote less than a chapter|
-|Content Editor(s)/Reviewer(s) | Checked your content|
-|Content Director(s) | Helped guide the content direction|
-|Content Consultants (include chapter name/link in parentheses or word "General") - make new line if more than one chapter involved | Gave high level advice on content|
-|Acknowledgments| Gave small assistance to content but not to the level of consulting |
+|Lead Content Instructor|[Ava Hoffman]|
+|Content Idea Contributor|Kasper Hansen|
+<!-- |Content Contributor | [Jeff Leek], [Michael Schatz], [Frederick Tan]| -->
+<!-- |Content Editors| [Katherine Cox], Natalie Kucher, [Frederick Tan]| -->
+<!-- |Content Directors | Kasper Hansen, [Jeff Leek], [Frederick Tan]| -->
+<!-- |Content Consultants (General) | [Jeff Leek], [Frederick Tan], [Carrie Wright] | -->
 |**Production**||
-|Content Publisher(s)| Helped with publishing platform|
-|Content Publishing Reviewer(s)| Reviewed overall content and aesthetics on publishing platform|
+|Content Publisher|[Ira Gooding]|
 |**Technical**||
-|Course Publishing Engineer(s)| Helped with the code for the technical aspects related to the specific course generation|
-|Template Publishing Engineers|[Candace Savonen], [Carrie Wright]|
+|Template Publishing Engineers|[Candace Savonen], [Carrie Wright], [Ava Hoffman]|
 |Publishing Maintenance Engineer|[Candace Savonen]|
 |Technical Publishing Stylists|[Carrie Wright], [Candace Savonen]|
 |Package Developers ([ottrpal])|[John Muschelli], [Candace Savonen], [Carrie Wright]|
-|**Art and Design**||
-|Illustrator(s)| Created graphics for the course|
-|Figure Artist(s)| Created figures/plots for course|
-|Videographer(s)| Filmed videos|
-|Videography Editor(s)| Edited film|
-|Audiographer(s)| Recorded audio|
-|Audiography Editor(s)| Edited audio recordings|
 |**Funding**||
-|Funder(s)| Institution/individual who funded course including grant number|
-|Funding Staff| Staff members who help with funding|
+|Funder| [National Human Genome Research Institute (NHGRI)] |
+|Funding Staff| Fallon Bachman, Jennifer Vessio, Emily Voeglein|
 
 &nbsp;
 
@@ -45,16 +34,23 @@ devtools::session_info()
 
 <!-- Author information -->
 
-[FirstName LastName]: link to personal website
+
+[Katherine Cox]: https://publichealth.jhu.edu/faculty/4170/katherine-cox
+[Ira Gooding]: https://publichealth.jhu.edu/faculty/4130/ira-gooding
+[Ava Hoffman]: https://www.avahoffman.com/
+[Jeff Leek]: https://jtleek.com/
 [John Muschelli]: https://johnmuschelli.com/
+[National Human Genome Research Institute (NHGRI)]: https://www.genome.gov/
 [Candace Savonen]: https://www.cansavvy.com/
+[Michael Schatz]: http://schatz-lab.org/
+[Frederick Tan]: https://carnegiescience.edu/frederick-tan
 [Carrie Wright]: https://carriewright11.github.io/
 
 <!-- Links -->
 
-[ottrpal]: https://github.com/jhudsl/ottrpal
+[Ottrpal]: https://github.com/jhudsl/ottrpal
 
-<!-- Fill out this table using these instructions: https://github.com/jhudsl/OTTR_Template/wiki/How-to-give-credits
+<!-- Fill out this table using these instructions: https://github.com/jhudsl/DaSL_Course_Template_Bookdown/wiki/How-to-give-credits
 
 For JHU courses, You will need to add Ira as a credit:
 
