--- a/01-overview.Rmd
+++ b/01-overview.Rmd
@@ -1,6 +1,6 @@
 
 ```{r, include = FALSE}
-ottpal::set_knitr_image_path()
+ottrpal::set_knitr_image_path()
 ```
 
 # Overview and Learning Objectives
