--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,7 @@ favicon: assets/anvil_favicon.ico
 
 # About this Book {-}
 
-This book is part of a series of books for the Genomic Data Science Analysis, Visualization, and Informatics Lab-space (AnVIL) of the National Human Genome Research Institute (NHGRI). Learn more about AnVIL by visiting `https://anvilproject.org` or reading the [preprint](https://www.biorxiv.org/content/10.1101/2021.04.22.436044v1).
+This book is part of a series of books for the Genomic Data Science Analysis, Visualization, and Informatics Lab-space (AnVIL) of the National Human Genome Research Institute (NHGRI). Learn more about AnVIL by visiting `https://anvilproject.org` or reading the [article in Cell Genomics](https://www.sciencedirect.com/science/article/pii/S2666979X21001063).
 
 This work is also supported in part by the Genomic Data Science Community Network (GDSCN), a faculty network working toward a vision where researchers, educators, and students from diverse backgrounds are able to fully participate in genomic data science research. We encourage you to check out the GDSCN [preprint](https://arxiv.org/abs/2201.08443).
 
